horizontal scroll fix

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -27,7 +27,7 @@
 body {
   /* display: flex; */
   /* flex-direction: column; */
-  min-width: 100vw;
+  /* min-width: 100vw; */
   min-height: 100vh;
   background-color: #f5f5f5;
   margin: 0;
